feat: add endpoint to find all job postings by project recruitment header ID and implement related repository and use case methods
